@@ -1,3 +1,6 @@
+* Fix issue in deriving total column from partial column profile if partial
+  column profile did not have {time,vertical} dimensions.
+
 0.6 2017-04-23
 ~~~~~~~~~~~~~~
 
